--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,3 +14,11 @@
   min-width: 100%;
   min-height: 100%
 }
+
+.carousel-image-homepage {
+  width:100vw;
+  max-height: 800px;
+  object-fit: cover;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+}
+
