alien fixed stuff?

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -59,7 +59,7 @@
 					const data = {
 						labels: {{tags | safe}},
 						datasets: [{
-							label: '{{profileinfo.username}}\'s Interests',
+							label: '{{userinfo.username}}\'s Interests',
 							data: {{data}},
 							fill: true,
 							backgroundColor: 'rgba(255, 99, 132, 0.2)',
