--- a/static/css/main.css
+++ b/static/css/main.css
@@ -16,9 +16,8 @@
 }
 
 .carousel-image-homepage {
-  width:100vw;
-  max-height: 800px;
+  width: 100vw;
+  max-height: 540px;
   object-fit: cover;
-  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+  background: black;
 }
-
