--- a/templates/organiser_login.html
+++ b/templates/organiser_login.html
@@ -23,7 +23,7 @@
             <br>
             {% endif %}
             {% endwith %}
-            <h1>Enter Login Details (Organiser):</h1>
+            <h1>Enter Login Details (Organiser)</h1>
             <hr>
             <form id="userloginform" action="" method="post" class="form-group">
                 <div class="input-group mb-3">
