--- a/templates/organiser_register.html
+++ b/templates/organiser_register.html
@@ -24,7 +24,7 @@
             <br>
             {% endif %}
             {% endwith %}
-	    <h1>Enter Registration Details (Organiser):</h1>
+	    <h1>Enter Registration Details (Organiser)</h1>
             <hr>
             <form id="userregisterform" action="" method="post" class="form-group">
                 <div class="input-group mb-3">
