--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -24,7 +24,7 @@
             <br>
             {% endif %}
             {% endwith %}
-            <h1>Enter Login Details (Volunteer):</h1>
+            <h1>Enter Login Details (Volunteer)</h1>
             <hr>
             <form id="userloginform" action="" method="post" class="form-group">
                 <div class="input-group mb-3">
