--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         App Logo
         <!--img src="{{ url_for('static', filename='logo.png') }}" width="100"> </img-->
       </a>
