--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -140,9 +140,9 @@
 		{% endfor %}
 	</div>
 	{% endif %}
-	<div class="row overflow-auto p-4 d-flex flex-row justify-content-center">
+	<div class="row p-4">
 		<h2>View/Filter Events!</h2>
-		<form id="filtereventsform" action="" method="post" class="form-group">	
+		<form id="filtereventsform" action="" method="post" class="form-group" style="width:60%">	
 			
 			<label for="date"><b>Date Range:</b></label>
 			<div class="input-group mb-3">
@@ -170,6 +170,9 @@
 
 			<button type="submit" class="btn btn-primary">Filter</button>
 		</form>
+
+	</div>
+	<div class="row overflow-auto p-4 d-flex flex-row justify-content-center">
 		{% for event in eventlist %}
 		<div class="card shadow-sm p-0 m-3" style="width:25vw;">
 			<h4 class="card-header p-2"> {{event.title}} </h4>
