--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,3 +21,11 @@
   object-fit: cover;
   background: black;
 }
+
+.table-width-30 {
+  width: 33%;
+}
+
+.card:hover {
+  box-shadow: 0 1rem 3rem rgba(0,0,0,.175) !important
+}
