--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -65,7 +65,7 @@
 	</div>
 	{% if userinfo != None  and userinfo['usertype'] == 0%}
 	<div class="row overflow-auto p-4">
-		<div class="col-6">
+		<div class="col-6 p-2">
 			<h2>Volunteering Interests</h2>
 			<div>
 				<canvas id="radar-chart" style="width:100%; height:auto;"> </canvas>
@@ -103,13 +103,13 @@
 			</div>
 		</div>
 
-		<div class="col overflow-auto">
-			<h5>Want to view more information about your volunteering experience?</h5>
+		<div class="col overflow-auto p-2 d-flex flex-column justify-content-center">
+			<h3>Want to view more information about your volunteering experience?</h3>
 			<a role="button" class="btn btn-primary" href="/profile/{{userinfo.username}}">Go To My Profile</a>
 		</div>
 	</div>
 	<div class="row overflow-auto p-4 d-flex flex-row justify-content-center">
-		<h2>Top 5 Recommended Events for {{userinfo.username}}</h2>
+		<h2 style="text-align:center;">Top 5 Recommended Events for {{userinfo.username}}</h2>
 		{% for rec in topfive %}
 		<div class="card shadow-sm p-0 m-3" style="width:25vw;">
 			<h4 class="card-header p-2"> {{rec.title}} </h4>
@@ -118,21 +118,25 @@
 				<table class="table table-borderless table-sm">
 				<tbody>
 				<tr>
-					<th scope="row"> Date </th>
+					<th scope="row" class="table-width-30"> Date </th>
 					<td> {{event.date}} </td>
 				</tr>
 				<tr>
-					<th scope="row"> Organiser </th>
+					<th scope="row" class="table-width-30"> Organiser </th>
 					<td> {{event.organiser}} </td>
 				</tr>
 				<tr>                                    
-					<th scope="row"> Type </th>
+					<th scope="row" class="table-width-30"> Type </th>
 					<td> {{event.type}} </td>
 				</tr>
 				<tr>                                    
-					<th scope="row"> Location </th>
+					<th scope="row" class="table-width-30"> Location </th>
 					<td> {{event.location}} </td>
 				</tr>
+				<tr>
+                                        <th scope="row" class="table-width-30"> # of Your Friends </th>
+                                        <td> {{event.numfriends}} </td>
+                                </tr>
 				</tbody>
 				</table>
 			</div>
@@ -140,10 +144,9 @@
 		{% endfor %}
 	</div>
 	{% endif %}
-	<div class="row p-4">
-		<h2>View/Filter Events!</h2>
+	<div class="row overflow-auto p-4 d-flex flex-row justify-content-center">
 		<form id="filtereventsform" action="" method="post" class="form-group" style="width:60%">	
-			
+			<h2 style="text-align:center">View/Filter Events!</h2>	
 			<label for="date"><b>Date Range:</b></label>
 			<div class="input-group mb-3">
 			<input class="form-control" id="lowDate" name="lowDate" placeholder="Start of Date Range (DD/MM/YYYY)" type="text" value={{request.form['lowDate']}}>
@@ -163,9 +166,9 @@
 			</select>
 			</div>
 
-			<div class="input-gruop mb-3">
+			<div class="input-group mb-3">
 			<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Sorting by Friends" name="friends" {%if 'friends' in request.form%} checked {%endif%}>
-			<label for="checkbox"><b>Sort by number of friends taking part</b></label>
+			<label for="checkbox" class="ms-2"><b>Sort by number of friends taking part</b></label>
 			</div>
 
 			<button type="submit" class="btn btn-primary">Filter</button>
@@ -181,21 +184,27 @@
 				<table class="table table-borderless table-sm">
 				<tbody>
 				<tr>
-					<th scope="row"> Date </th>
+					<th scope="row" class="table-width-30"> Date </th>
 					<td> {{event.date}} </td>
 				</tr>
 				<tr>
-					<th scope="row"> Organiser </th>
+					<th scope="row" class="table-width-30"> Organiser </th>
 					<td> {{event.organiser}} </td>
 				</tr>
 				<tr>                                    
-					<th scope="row"> Type </th>
+					<th scope="row" class="table-width-30"> Type </th>
 					<td> {{event.type}} </td>
 				</tr>
 				<tr>                                    
-					<th scope="row"> Location </th>
+					<th scope="row" class="table-width-30"> Location </th>
 					<td> {{event.location}} </td>
 				</tr>
+				{% if userinfo != None %}
+				<tr>
+                                        <th scope="row" class="table-width-30"> # of Your Friends </th>
+                                        <td> {{event.numfriends}} </td>
+                                </tr>
+				{% endif %}
 				</tbody>
 				</table>
 				<a href="/event/{{event.eventid}}" class="stretched-link"></a>
@@ -203,6 +212,7 @@
 		</div>
 		{% endfor %}
 	</div>
+	<script> const collection = document.getElementsByClassName("shadow-sm"); </script>
 </div>
 
 {% endblock %}
