--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -18,6 +18,7 @@
 						<th scope="row"> Username </th>
 						<td> {{profileinfo.username}} </td>
 					</tr>
+					</tbody></table>
 					{% if profileinfo.username == userinfo.username %}
 					<tr>                                    
 						<th scope="row"> Phone Number (Private) </th>
@@ -26,8 +27,15 @@
 						<td> {{profileinfo.birthdate}} </td></tr><tr>
 						<th scope="row"> Residential Location (Private) </th>
 						<td> {{profileinfo.location}} </td></tr>
+					{% else %}
+					<form id="friendform" action="" method="post" class="form-group">
+						{% if profileinfo['username'] not in userinfo['friends'] %}
+						<button type="submit" class="btn btn-primary">Add Friend</button>
+						{% else %}
+						<button type="submit" class="btn btn-primary">Remove Friend :(</button>
+						{% endif %}
+					</form>
 					{% endif %}
-					</tbody></table>
 				</div>
 			</div>
 		</div>
@@ -54,6 +62,7 @@
 	</div>
 
 	<div class="col p-4">
+		{% if eventlist | length != 0 %}
 		<div class="row mb-3">
 			<div class="col-5">
 				<h4>Volunteering Interests</h4>
@@ -147,6 +156,9 @@
 			</div>
 			{% endfor %}
 		</div>
+		{% else %}
+		<h4>This user has not volunteered for any events :(</h4>
+		{% endif %}
 	</div>
 </div>
 {% endblock %}
