--- a/templates/organiser_register.html
+++ b/templates/organiser_register.html
@@ -7,7 +7,7 @@
 <div class="container-fluid p-0 row">
 
     <div class="col-7">
-        <img src="https://www.fastweb.com/uploads/article_photo/photo/2038859/crop635w_Volunteer.jpeg" style="max-height: 100vh; width: 100vw; object-fit:cover;">
+        <img src="https://peacekeeping.un.org/sites/default/files/styles/1200x500/public/field/image/volunteering-752x348.jpg?itok=X4JALlh7" style="max-height: 100vh; width: 100vw; object-fit:cover;">
     </div>
     <div class="container col d-flex flex-column justify-content-center">
         <div class="bg-light p-5">
