--- a/templates/user_register.html
+++ b/templates/user_register.html
@@ -7,7 +7,7 @@
 <div class="container-fluid p-0 row">
 
     <div class="col-7">
-        <img src="https://www.fastweb.com/uploads/article_photo/photo/2038859/crop635w_Volunteer.jpeg" style="max-height: 100vh; width: 100vw; object-fit:cover;">
+        <img src="https://blog.clvgroup.com/wp-content/uploads/Top-5-Great-Volunteer-Opportunities-in-Ottawa.jpg" style="max-height: 100vh; width: 100vw; object-fit:cover;">
     </div>
     <div class="container col d-flex flex-column justify-content-center">
         <div class="bg-light p-5">
